fix java 17 not compiling